Fixing quality gate issues